crates/glyph-cli/tests/corpus/valid/flow_assign.glyph
block inspect_repo(scope = ".") -> Report
    description: "Inspect the repository at the given scope."
    flow:
        "Examine the repository at {scope} and produce a report."
        return context

skill diagnose(scope = ".") -> Report
    description: "Inspect the scope and return its context."
    flow:
        ctx = inspect_repo(scope)
        "Summarize the issues you found in {ctx}."
        return ctx
