crates/glyph-cli/tests/corpus/invalid/flow_assign_use_before_bind.glyph
block inspect_repo(scope = ".") -> Report
    description: "Inspect the repo."
    flow:
        "Examine {scope}."
        return context

skill diagnose(scope = ".") -> Report
    description: "Use before bind."
    flow:
        "Summarize {ctx}."
        ctx = inspect_repo(scope)
        return ctx
